[gd_scene load_steps=2 format=3 uid="uid://d367qv7lcwchy"]

[ext_resource type="Script" path="res://server_manager.gd" id="1_nco44"]

[node name="ServerManager" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_nco44")

[node name="ServerList" type="ItemList" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1.0
offset_top = 64.0
offset_right = 385.0
offset_bottom = 448.0
metadata/_edit_lock_ = true

[node name="ButtonBack" type="Button" parent="."]
layout_mode = 0
offset_top = 456.0
offset_right = 384.0
offset_bottom = 504.0
text = "Zur√ºck"
metadata/_edit_lock_ = true

[node name="ButtonCreateServer" type="Button" parent="."]
layout_mode = 0
offset_left = 305.0
offset_top = 8.0
offset_right = 385.0
offset_bottom = 56.0
text = "LISTEN"
metadata/_edit_lock_ = true

[node name="InputHostname" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1.0
offset_top = 8.0
offset_right = 193.0
offset_bottom = 56.0
text = "0.0.0.0"
placeholder_text = "Hostname"
alignment = 1
caret_blink = true
caret_blink_interval = 0.5
metadata/_edit_lock_ = true

[node name="InputPort" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 200.0
offset_top = 8.0
offset_right = 296.0
offset_bottom = 56.0
text = "8080"
placeholder_text = "Port"
alignment = 1
caret_blink = true
caret_blink_interval = 0.5
metadata/_edit_lock_ = true

[connection signal="pressed" from="ButtonCreateServer" to="." method="_on_button_create_server_pressed"]
